--- a/splashpage_v0.2.1.html
+++ b/splashpage_v0.2.1.html
@@ -68,7 +68,7 @@ padding: 10px;
 content: "";    
 clear: both;
 display: grid;
-grid-template-columns: 19% 3% 22% 3% 20% 15% 15%;
+grid-template-columns: 19% 4% 19% 4% 20% 17% 17%;
 font-size: 1.6rem;
 align-items: center;
 }
@@ -95,14 +95,14 @@ align-items: center;
     <div class="His">
         <div style="display: grid; grid-template-columns: 50% 50%; align-items: center;">
             <div><h2>History</h2></div>
-            <div><a href="">Download all data</a></div>
+            <div><a href="/history">Download all data</a></div>
         </div>
         <div class="boxed">
             <div>Today <br> so far...</div>
             <div> <h2> &#127777;</h2></div>
             <div class="half">  &#9652; 40.20&deg;C<br> &#9662; -24.10&deg;C</div>
             <div> <h2> &#128167;</h2></div>
-            <div>&#9652; 00.00 % <br> &#9662; 00.00 %  </div>
+            <div>&#9652; 00.00 &percnt; <br> &#9662; 00.00 &percnt;  </div>
             <div>0000.0 hPa</div>
             <div>000000 ppb</div>
         </div>
@@ -112,7 +112,7 @@ align-items: center;
             <div> <h2> &#127777;</h2></div>
             <div class="half">  &#9652; 40.20&deg;C<br> &#9662; -24.10&deg;C</div>
             <div> <h2> &#128167;</h2></div>
-            <div>&#9652; 00.00 % <br> &#9662; 00.00 %  </div>
+            <div>&#9652; 00.00 &percnt; <br> &#9662; 00.00 &percnt;  </div>
             <div>0000.0 hPa</div>
             <div>000000 ppb</div>
         </div>
@@ -122,7 +122,7 @@ align-items: center;
             <div> <h2> &#127777;</h2></div>
             <div class="half">  &#9652; 40.20&deg;C<br> &#9662; -24.10&deg;C</div>
             <div> <h2> &#128167;</h2></div>
-            <div>&#9652; 00.00 % <br> &#9662; 00.00 %  </div>
+            <div>&#9652; 00.00 &percnt; <br> &#9662; 00.00 &percnt;  </div>
             <div>0000.0 hPa</div>
             <div>000000 ppb</div>
         </div>
@@ -132,7 +132,7 @@ align-items: center;
             <div> <h2> &#127777;</h2></div>
             <div class="half">  &#9652; 40.20&deg;C<br> &#9662; -24.10&deg;C</div>
             <div> <h2> &#128167;</h2></div>
-            <div>&#9652; 00.00 % <br> &#9662; 00.00 %  </div>
+            <div>&#9652; 00.00 &percnt; <br> &#9662; 00.00 &percnt;  </div>
             <div>0000.0 hPa</div>
             <div>000000 ppb</div>
         </div>
@@ -142,7 +142,7 @@ align-items: center;
             <div> <h2> &#127777;</h2></div>
             <div class="half">  &#9652; 40.20&deg;C<br> &#9662; -24.10&deg;C</div>
             <div> <h2> &#128167;</h2></div>
-            <div>&#9652; 00.00 % <br> &#9662; 00.00 %  </div>
+            <div>&#9652; 00.00 &percnt; <br> &#9662; 00.00 &percnt;  </div>
             <div>0000.0 hPa</div>
             <div>000000 ppb</div>
         </div>
@@ -152,7 +152,7 @@ align-items: center;
             <div> <h2> &#127777;</h2></div>
             <div class="half">  &#9652; 40.20&deg;C<br> &#9662; -24.10&deg;C</div>
             <div> <h2> &#128167;</h2></div>
-            <div>&#9652; 00.00 % <br> &#9662; 00.00 %  </div>
+            <div>&#9652; 00.00 &percnt; <br> &#9662; 00.00 &percnt;  </div>
             <div>0000.0 hPa</div>
             <div>000000 ppb</div>
         </div>
@@ -162,7 +162,7 @@ align-items: center;
             <div> <h2> &#127777;</h2></div>
             <div class="half">  &#9652; 40.20&deg;C<br> &#9662; -24.10&deg;C</div>
             <div> <h2> &#128167;</h2></div>
-            <div>&#9652; 00.00 % <br> &#9662; 00.00 %  </div>
+            <div>&#9652; 00.00 &percnt; <br> &#9662; 00.00 &percnt;  </div>
             <div>0000.0 hPa</div>
             <div>000000 ppb</div>
         </div>
