--- a/splashpage_v0.2.1.html
+++ b/splashpage_v0.2.1.html
@@ -76,6 +76,7 @@ align-items: center;
         "Ai Hi"
         "Cr Cr";
         gap: 0.1rem 0.1rem;
+        height: max(70vh, 100vw);
     }
     h1 {font-size: 2.5rem;}
     h2, .container {font-size: 2rem;}
