--- a/timesync.html
+++ b/timesync.html
@@ -11,13 +11,12 @@
 <h1>Current millis</h1>
 <h2 id="date"></h2><br>
 <button onclick="sendTime()">Sync</button>
-
 <script>
 document.getElementById("date").innerHTML = new Date().getTime();
 function sendTime(){
     var t = new Date().getTime();
     var xhr = new XMLHttpRequest();
-    xhr.open("GET", "/update?set_millis="+ t);
+    xhr.open("GET", "/time?set_millis="+ t);
     document.getElementById("date").innerHTML = t;
     xhr.send();
 };
