--- a/splashpage_v0.2.3.html
+++ b/splashpage_v0.2.3.html
@@ -51,9 +51,7 @@
         background: linear-gradient(240deg, rgba(165, 51, 51, 0.3) , rgba(240, 205, 7, 0)  );
     }
     
-    .half {
-    padding: 10px;
-    }
+    .half {padding: 10px;}
     
     .boxed {
     content: "";    
