--- a/timesync.html
+++ b/timesync.html
@@ -7,10 +7,10 @@
 <h2 id="date"></h2><br>
 <button onclick="sdt()">Sync</button>
 <script>
-function updt(){document.getElementById("date").innerHTML=Date.now()/1000>>0;}
-updt();
+//function updt(){document.getElementById("date").innerHTML=Date.now()/1000>>0;}
+//updt;
 sdt();
-setInterval(updt,1000);
+setInterval(()=>{document.getElementById("date").innerHTML=Date.now()/1000>>0;},1000);
 function sdt(){
     var xhr = new XMLHttpRequest();
     let tn = Date.now()/1000>>0;
